--- a/project2/index.html
+++ b/project2/index.html
@@ -20,11 +20,28 @@
     <div class="header__btn-container">
         <button class="btn">Enter App</button>
         <button class="btn">Log In</button>
+    </div>
+    <button class="header__bars">
+        <svg xmlns="http://www.w3.org/2000/svg"
+         fill="none"
+         viewBox="0 0 24 24" 
+         stroke-width="1.5" 
+         stroke="currentColor"
+         width="24"
+         height="24"
+         >
+    <path 
+        stroke-linecap="round" 
+        stroke-linejoin="round" 
+        d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+</svg>
+
+    </button>
 </header>
 <section class="hero">
     <h1 class="hero__title">Accounting made simple for small businesses</h1>
     <p class="hero__text">Most bookeeping software is accurate but hard to use, we make the opposite tradeoof and hope you dont get audited. </p>
-    <a href="" class="btn">Learn more</a>
+    <a href="" class="btn hero__btn">Learn more</a>
 </section>
 <section class=" pricing">
     <h2 class="pricing__title">Simple Transparent pricing</h2>
