--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -12,6 +12,11 @@
 <link rel="stylesheet" href="./styles/components/mobile-nav.css">
 <link rel="stylesheet" href="./styles/components/hero.css">
 <link rel=" stylesheet" href="./styles/components/pricing.css">
+<link rel="stylesheet" href="./styles/components/about.css">
+<link rel="stylesheet" href="./styles/components/testimonial.css">
+<link rel="stylesheet" href="./styles/components/cta.css">
+<link rel="stylesheet" href="./styles/components/footer.css">
+<link rel="stylesheet" href="./styles/components/features.css">
 <link rel="stylesheet" href="./styles/utils.css">
 <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
 <title>Final Project</title>
@@ -197,30 +202,107 @@
       <div class="about__item2">
         <div>
           <h3 class="about__label">Channel total Subscribers</h3>
-          <p class="about__stat">88,000+subs</p>
+          <p class="about__stat">88,000<span class="about__stat-span">+subs</span>
+          </p>
         </div>
         <div>
           <h3 class="about__label">Channel total Views</h3>
-          <p class="about__stat">3,000,000+Views</p>
+          <p class="about__stat">3,000,000<span class="about__stat-span">+Views</span>
+          </p>
         </div>
         <div>
           <h3 class="about__label">Channel total watch hours</h3>
-          <p class="about__stat">4,000+hours</p>
+          <p class="about__stat">4,000<span class="about__stat-span">+hours</span>
+          </p>
         </div>
         <div>
           <h3 class="about__label">Channel total videos</h3>
-          <p class="about__stat">13+videos</p>
+          <p class="about__stat">13<span class="about__stat-span">+videos</span>
+          </p>
         </div>
       </div>
     </div>
   </section>
-  <!-- <section></section>
-  <section></section>
-  <section></section>
-  <section></section> -->
+  <section class = "testimonial container section">
+    <h2 class="title">Love & Support</h2>
+    <h2 class="testimonial__title">Testimonials</h2>
+    <p class=" testimonial__description">
+      There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities.
+     </p>
+  <div class="testimonial__container">
+      <div class="testimonial__box testimonail__box--0margin">
+        <p class="testimonial__comment">There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities. </p>
+        <p class=" testimonail__name">@Jhon Doe</p>
 
+      </div>
+      <div class="testimonial__box">
+        <p class="testimonial__comment">There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities. </p>
+        <p class=" testimonail__name">@Jhon Doe</p>
+
+      </div>
+      <div class="testimonial__box">
+        <p class="testimonial__comment">There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities. </p>
+        <p class=" testimonail__name">@Jhon Doe</p>
+
+      </div>
+      <div class="testimonial__box">
+        <p class="testimonial__comment">There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities. </p>
+        <p class=" testimonail__name">@Jhon Doe</p>
+
+      </div>
+      <div class="testimonial__box">
+        <p class="testimonial__comment">There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities. </p>
+        <p class=" testimonail__name">@Jhon Doe</p>
+
+      </div>
+    </div>
+  </section>
+  <section class=" features container section">
+    <h2 class="title">Features</h2>
+    <div class="features__container">
+      <div class="features__content">
+        <h2 class="features__title">A better way to learn</h2>
+        <p class="features__description">There is still plenty more action to go this weekend
+           with the All-Star Game taking place Saturday.
+        </p>
+      </div>
+      <div class="features__grid">
+        <div class="features__box features_box--0margin">
+          <h3 class="features__box-title">Lorem Ipsum</h3>
+          <p class="features__box-description">There is still plenty more action to go this weekend with 
+            the All-Star Game taking place Saturday.</p>
+        </div>
+        <div class="features__box"><h3 class="features__box-title">Lorem Ipsum</h3>
+          <p class="features__box-description">There is still plenty more action to go this weekend with 
+            the All-Star Game taking place Saturday.</p>
+        </div>
+        <div class="features__box"><h3 class="features__box-title">Lorem Ipsum</h3>
+          <p class="features__box-description">There is still plenty more action to go this weekend with 
+            the All-Star Game taking place Saturday.</p>
+        </div>
+        <div class="features__box"><h3 class="features__box-title">Lorem Ipsum</h3>
+          <p class="features__box-description">There is still plenty more action to go this weekend with 
+            the All-Star Game taking place Saturday.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="cta container section">
+    <img src="./Public/cta.png" alt="Guy leaning down"
+   width="1020"
+   height="1407"
+   class="cta__img"
+    >
+    <h2 class="cta__title">You have decided upon your purpose.
+</h2>
+<p class="cta__description ">Slay the dragon - get the treasure, that's how it works. But first you must prepare. 
+  Start learning and become an expert front-end, full-stack jamstack web developer.</p>
+  <a href="#" class="cta__btn btn">Enter App</a>
+</section>
 </main>
-<!-- <footer></footer> -->
+<footer class="container section">
+  <p class="footer__description">~ Slaying The Dragon ~</p>
+</footer>
 
 </body>
 </html>
