Final Proj (updated)

--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -14,11 +14,15 @@
 <link rel=" stylesheet" href="./styles/components/pricing.css">
 <link rel="stylesheet" href="./styles/components/about.css">
 <link rel="stylesheet" href="./styles/components/testimonial.css">
+<link rel="stylesheet" href="./styles/components/faq.css">
 <link rel="stylesheet" href="./styles/components/cta.css">
 <link rel="stylesheet" href="./styles/components/footer.css">
 <link rel="stylesheet" href="./styles/components/features.css">
 <link rel="stylesheet" href="./styles/utils.css">
 <link rel="stylesheet" href="https://cdn.lineicons.com/5.0/lineicons.css" />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 <title>Final Project</title>
 <script src="./src/main.js" type= "module"></script>
 </head>
@@ -235,6 +239,11 @@
         <p class=" testimonail__name">@Jhon Doe</p>
 
       </div>
+      <div class="testimonial__box testimonail__box--0margin">
+        <p class="testimonial__comment">There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities. </p>
+        <p class=" testimonail__name">@Jhon Doe</p>
+
+      </div>  
       <div class="testimonial__box">
         <p class="testimonial__comment">There is still plenty more action to go this weekend with the All-Star Game taking place Saturday. But for now, here are winners and losers from Friday's festivities. </p>
         <p class=" testimonail__name">@Jhon Doe</p>
@@ -257,7 +266,7 @@
       </div>
     </div>
   </section>
-  <section class=" features container section">
+<section class=" features container section">
     <h2 class="title">Features</h2>
     <div class="features__container">
       <div class="features__content">
@@ -286,7 +295,75 @@
         </div>
       </div>
     </div>
-  </section>
+</section>
+<section class="faq container section">
+  <h2 class="title">FAQ</h2>
+  <h2 class="faq__title">Frequently asked questions</h2>
+  <p class="faq__description">
+   Well, let me tell you something, funny boy. Y'know that little stamp, the one that says "New York Public Library"?
+   Well that may not mean anything to you, but that means a lot to me. One whole hell of a lot. 
+   Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, 
+   sitting down, opening a book, right now, in a branch at the local library and finding drawings.
+  </p>
+  <div class="faq__container">
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+    <div class="faq__box">
+      <h3 class="faq__box-title">Lorem Ipsum</h3>
+      <p class="faq__box-description">
+        Maybe we can live without libraries, people like you and me. Maybe. Sure, we're too old to change the world, but what about that kid, sitting down, opening a book, right now, in a branch at the local library and finding drawings 
+      </p>
+    </div>
+
+  </div>
+
+</section>
   <section class="cta container section">
     <img src="./Public/cta.png" alt="Guy leaning down"
    width="1020"
